# vouch

./: .bandit  .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  DEPENDENCIES_ANALYSIS.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  PROVIDER_SETUP_GUIDE.md  README.md  REQUIREMENTS_GUIDE.md  TESTING_GUIDE.md  claude-plan.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  prompt.txt  pyproject.toml  pytest.ini  receipt-breakdown-schema.json  requirements-dev.txt  requirements.txt  run.sh  verify_install.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py
app/routers/: search.py  upload.py
app/services/: base_llm_service.py  elasticsearch_service.py  gemini_service.py  image_utils.py  llm_factory.py  mongodb_service.py  ollama_service.py  openai_service.py  openapi_service.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  index.html
tests/: __init__.py  conftest.py  test_config.py  test_models.py
tests/routers/: test_search.py  test_upload.py
tests/services/: test_elasticsearch_service.py  test_gemini_service.py  test_image_utils.py  test_llm_factory.py  test_mongodb_service.py  test_ollama_service.py  test_openai_service.py  test_openapi_service.py
uploads/: .gitkeep
