[project]
name = "vouch"
version = "0.1.0"
description = "AI-powered receipt analysis and search application"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.28.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "jinja2>=3.1.3,<4.0",
    # Database & Search
    "motor>=3.4.0,<4.0",
    "elasticsearch[async]>=8.12.0,<9.0",
    # LLM Providers
    "httpx>=0.27.0,<1.0",
    "openai>=1.10.0,<2.0",
    "google-genai>=0.1.0,<1.0",
    # Configuration & Validation
    "python-dotenv>=1.0.1,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "jsonschema>=4.21.1,<5.0",
    # File Processing
    "Pillow>=10.2.0,<11.0",
    "pypdf>=4.0.0,<5.0",
    "pdf2image>=1.17.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "Flake8-pyproject>=1.2.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Black - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.venv\.backup
  | venv
  | __pycache__
  | build
  | dist
  | \.pytest_cache
  | htmlcov
  | uploads
)/
'''

# ============================================================================
# isort - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Sections
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["app"]

# Skip these directories
skip_glob = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".venv.backup",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    "uploads"
]

# Sorting
force_single_line = false
force_sort_within_sections = false
lexicographical = false
order_by_type = true
group_by_package = false

# ============================================================================
# Flake8 - Linting
# Note: Requires Flake8-pyproject plugin: pip install Flake8-pyproject
# ============================================================================
[tool.flake8]
max-line-length = 100
extend-exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".venv.backup",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    "uploads"
]
# Ignore errors that conflict with black
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator (conflicts with black)
    "E501",  # line too long (black handles this)
]
select = ["E", "W", "F"]
show-source = true
count = true
statistics = true

# ============================================================================
# Pytest - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_services: Tests requiring external services (MongoDB, Elasticsearch, Ollama)",
    "llm: Tests for LLM providers",
]

# ============================================================================
# Bandit - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".venv.backup",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    "uploads",
    "tests"
]
skips = []
tests = []

# ============================================================================
# Coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
