[project]
name = "vouch"
version = "0.1.0"
description = "AI-powered receipt analysis and search application"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.28.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "jinja2>=3.1.3,<4.0",
    # Database & Search
    "motor>=3.4.0,<4.0",
    "elasticsearch[async]>=8.12.0,<9.0",
    # LLM Providers
    "httpx>=0.27.0,<1.0",
    "openai>=1.10.0,<2.0",
    "google-genai>=0.1.0,<1.0",
    # Configuration & Validation
    "python-dotenv>=1.0.1,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "jsonschema>=4.21.1,<5.0",
    # File Processing
    "Pillow>=10.2.0,<11.0",
    "pypdf>=4.0.0,<5.0",
    "pdf2image>=1.17.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ============================================================================
# Ruff - Linting & Formatting (replaces black, isort, flake8)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git", ".venv", "venv", "__pycache__",
    "build", "dist", "htmlcov", "uploads",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================================================
# Pytest - Testing
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Filter warnings from third-party libraries
filterwarnings = [
    "error",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:google\\.genai",
    "ignore::UserWarning:pydantic",
]

# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_services: Tests requiring external services (MongoDB, Elasticsearch, Ollama)",
    "llm: Tests for LLM providers",
]

# ============================================================================
# Bandit - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".venv.backup",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    "uploads",
    "tests"
]
skips = []
tests = []

# ============================================================================
# Coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
